<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formulario_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0e0e0"
    android:padding="8dp"

    tools:context="com.example.robertoborges.desarrollandounaaplicacion.FormularioContacto">

    <LinearLayout
        android:id="@+id/etq1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_usuario"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/usuario1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/NombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nombre_completo"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/etq2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etq1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_calendario"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/calendario" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/FechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/FechaNacimiento"
                android:inputType="datetime"
                android:onClick="fecha" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/etq3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etq2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_telefono"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/guia_telefonica" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Telefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telefono"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/etq4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etq3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_email"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/email" />

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/E_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/etq4"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#FFFFFF">

            <EditText
                android:id="@+id/Descricion_Contacto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top|start"
                android:hint="@string/descripcion_contacto"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/Btn_Siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:onClick="siguiente"
            android:text="@string/siguiente"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
